--- a/notebooks/RandomForest.ipynb
+++ b/notebooks/RandomForest.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "import sys\n",
     "sys.path.append(\"..\")\n",
-    "from scripts import file"
+    "from scripts import file, featureExtraction"
    ]
   },
   {
@@ -1468,23 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "dde3fda1-db1b-4036-9844-5087009180db",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import librosa \n",
-    "import numpy as np\n",
-    "def extract_feature(file_path) :\n",
-    "    y, sr = librosa.load(file_path, sr=None)\n",
-    "    mfccs = librosa.feature.mfcc(y=y, sr=sr, n_mfcc=13)\n",
-    "    mfccs_mean = np.mean(mfccs.T, axis=0)\n",
-    "    return mfccs_mean.reshape(1,-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "e91a0aea-c9a0-4e64-bcd9-f34ee64bafb6",
    "metadata": {},
    "outputs": [],
@@ -1494,17 +1478,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "f0a34956-845f-44a0-95d8-0398a2d9bb7b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature = extract_feature(file_path)"
+    "feature = featureExtraction.feature_extraction(file_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "8fdbe357-2859-44c4-b7d3-8ea9280256d4",
    "metadata": {},
    "outputs": [],
@@ -1514,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "e741ebcd-194e-49fa-b4c5-91f4c97bde3a",
    "metadata": {},
    "outputs": [
@@ -1540,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "8bf35c78-c209-4376-81af-d28d04e3dfe3",
    "metadata": {},
    "outputs": [],
